Bug 333373 - Status in Chat Plasmoid doesn't get updated
Summary: Status in Chat Plasmoid doesn't get updated
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: chat-plasmoid (other bugs)
Version First Reported In: git-latest
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-13 12:11 UTC by Thomas Pfeiffer
Modified: 2014-04-13 12:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Pfeiffer 2014-04-13 12:11:51 UTC
When chatting with someone using the chat plasmoid and that person changes their status, it doesn't get updated in the chat plasmoid

Reproducible: Always

Steps to Reproduce:
1. Open a chat in the chat plasmoid
2. Check the status of the person in the plasmoid
3. Have the person change their status
4. Watch the plasmoid
Actual Results:  
Nothing changes

Expected Results:  
Status in the plasmoid should be updated
Comment 1 David Edmundson 2014-04-13 12:31:32 UTC
Git commit 43431b23b467308fd1e50699387bcaa442b11461 by David Edmundson.
Committed on 13/04/2014 at 12:23.
Pushed by davidedmundson into branch 'master'.

Connect contact signals in chat plasmoid

REVIEW: 117537

M  +6    -0    KTp/Declarative/conversation.cpp
M  +6    -6    KTp/Declarative/conversation.h

http://commits.kde.org/telepathy-common-internals/43431b23b467308fd1e50699387bcaa442b11461