Connect contact signals in chat plasmoid

REVIEW: 117537
BUG: 333373